--- a/resources/scss/layout/_setup.scss
+++ b/resources/scss/layout/_setup.scss
@@ -126,17 +126,26 @@
             display: block;
             width: 100%;
             height: 100%;
-
-            .screen-inner {
-                position: relative;
-                height: 100%;
-            }
         }
     }
 
+    .screen-inner {
+        position: relative;
+        height: 100%;
+    }
+
     .product {
-        padding: 2rem 4rem 3rem;
+        padding: 3rem 4rem;
         text-align: right;
+
+        .scrmode-tit {
+            margin-bottom: 1.6rem;
+            font-size: 4rem;
+            font-weight: 700;
+            line-height: 120%;
+            letter-spacing: -0.48px;
+            text-align: left;
+        }
 
         .tit {
             font-size: 2.4rem;
@@ -185,6 +194,22 @@
 
             .screen-inner {
                 padding-top: 3.3rem;
+            }
+        }
+    }
+
+    .scr-label {
+        display: block;
+        position: relative;
+        height: calc(100vh - 120px);
+        cursor: pointer;
+    }
+
+    .src-input {
+        &:checked {
+            & + .scr-label {
+                background-color: $Dark;
+                color: $White;
             }
         }
     }
