--- a/resources/scss/base/_button.scss
+++ b/resources/scss/base/_button.scss
@@ -5,7 +5,7 @@
 
     .btn-inner2 {
         padding: 1.8rem 0;
-        background: linear-gradient(180deg, rgba($Gray900, 0) 0%, rgba($Gray900, 0.9) 30%, rgba($Gray900, 0.9) 100%);
+        background: linear-gradient(180deg, rgba($Dark, 0) 0%, rgba($Dark, 0.9) 30%, rgba($Dark, 0.9) 100%);
     }
 
     .btn {
