--- a/resources/scss/layout/_list.scss
+++ b/resources/scss/layout/_list.scss
@@ -97,3 +97,13 @@
         }
     }
 }
+
+.dark {
+    .list-product {
+        .product-info {
+            .price {
+                color: $White;
+            }
+        }
+    }
+}
